src/objects/Revenue_Insertion__c.object
<CustomObject>
    <fields>
        <fullName>AdSize__c</fullName>
        <label>Ad Size</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Id__c</fullName>
        <label>URN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advertiser</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Advertiser</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Insertions (Advertiser)</relationshipLabel>
        <relationshipName>Revenue_Insertions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advertiser_Name__c</fullName>
        <label>Advertiser Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Insertions (Agency)</relationshipLabel>
        <relationshipName>Revenue_Insertions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insertion_Date__c</fullName>
        <label>Insertion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsCancelled__c</fullName>
        <label>Is Cancelled</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsColour__c</fullName>
        <label>Is Colour</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaCode__c</fullName>
        <label>Media Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Time__c</fullName>
        <label>Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price_Exc_Comm__c</fullName>
        <label>Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Production_Id__c</fullName>
        <externalId>true</externalId>
        <label>Production Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubName__c</fullName>
        <label>Pub Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Revenue Insertion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Ad_Id__c</columns>
        <columns>Advertiser_Id__c</columns>
        <columns>Agency_Id__c</columns>
        <columns>Insertion_Date__c</columns>
        <columns>Price_Exc_Comm__c</columns>
        <columns>Commission__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Revenue Insertion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Insertions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>